@startuml

title __CONTROLLER's Class Diagram__\n

  namespace Controller {
    class Controller.AdministratorController {
        - coordinators : List<String>
        - currentShowingType : Type
        - postmans : List<String>
        - selectedUserName : String
        - users : List<User>
        + AdministratorController()
        + addEntryButtonActionListener()
        + classifyUsers()
        + deleteButtonActionListener()
        + updateEntryButtonActionListener()
        + updateSecondaryTable()
        + viewCoordinatorsButtonActionListener()
        + viewPostmansButtonActionListener()
        + windowListener()
        - createTable()
    }
  }
  

  namespace Controller {
    class Controller.CoordinatorViewController {
        # currentUser : User
        - parcels : List<Parcel>
        - selectedParcelID : Integer
        + CoordinatorViewController()
        + addParcelButtonActionListener()
        + deleteParcelButtonActionListener()
        + getCurrentUser()
        + mapPaneComponentAdapter()
        + populatePostmanTable()
        + saveReportButtonActionListener()
        + searchParcelByIDButtonActionListener()
        + updateParcelButtonActionListener()
        + updateSecondaryTable()
        + viewParcelsButtonActionListener()
        + windowListener()
        - createTable()
        - setCurrentUser()
    }
  }
  

  namespace Controller {
    class Controller.LoginViewController {
        + LoginViewController()
        + endView()
        + verifyLogin()
    }
  }
  

  namespace Controller {
    class Controller.MainController {
        - CLIENT_CONFIGURATION_FILE_PATH : String
        - socket : Socket
        + MainController()
        + clientSetup()
        + createContainerFromGraph()
        + switchView()
    }
  }
  

  namespace Controller {
    class Controller.PostmanViewController {
        # currentUser : User
        - parcels : List<Parcel>
        + PostmanViewController()
        + getCurrentUser()
        + mapPaneComponentAdapter()
        + searchParcelByIDButtonActionListener()
        + viewParcelsButtonActionListener()
        + windowListener()
        - createTable()
        - setCurrentUser()
    }
  }
  

  namespace Controller {
    class Controller.ServerCommunication {
        {static} + mainController : MainController
        {static} + socket : Socket
        {static} + addUser()
        {static} + deleteParcel()
        {static} + deleteUser()
        {static} + exit()
        {static} + getGraphLayout()
        {static} + getParcelByID()
        {static} + getParcels()
        {static} + getParcelsByPostmanID()
        {static} + getUserByID()
        {static} + getUserByUsername()
        {static} + getUsers()
        {static} + insertParcel()
        {static} + setMainController()
        {static} + setSocket()
        {static} + updateParcel()
        {static} + updateUser()
        {static} + verifyLogin()
    }
  }
  

  Controller.AdministratorController o-- View.AdministratorView : administratorView
  Controller.AdministratorController o-- Controller.MainController : mainController
  Controller.CoordinatorViewController o-- Controller.MainController : mainController
  Controller.CoordinatorViewController o-- View.CoordinatorView : coordinatorView
  Controller.LoginViewController o-- View.LoginView : loginView
  Controller.MainController o-- Controller.LoginViewController : loginViewController
  Controller.PostmanViewController o-- Controller.MainController : mainController
  Controller.PostmanViewController o-- View.PostmanView : postmanView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
